--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "author": "Kien Alang <alangkien96@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "yarn run test"
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.8",
+    "@babel/preset-env": "^7.24.8",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.4"
